#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package ParCorAna
#------------------------------------------------------------------------

Package author: David A. Schneider

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-00-09:
- fix bug with overriding system_parms via command line arguments
- improve error/diagnostic messages
	
Tag: V00-00-08:
- add MPI_Barrier with output to driver to check for MPI problems 
- make %C increase in h5 output file if there is a .inprogress file
- fix bug with overriding numServers through command line
- improve documentation
	
Tag: V00-00-07
- fix bugs with handling stream in dataset, need to specify streams for 
  non-standard streams, can't specify more servers than DAQ streams
- fix bug in UserG2, did not implement beforeData for incremental
- adjust documentation a bit
- take out userg2 page from sphinxdoc
- add modules to src	
- add code to parCorAnaMaskColorTool to check for geometry information that is
  wrong - on the tutorial data it returned iX, iY that were one pixel greater
  then the image size - image producer must have changed - now the geometry 
  file is out of sync?
	
Tag: V00-00-06
- remove XCorrWorkerBase and replace with WorkerData
- add unit tests for 60 events of cspad2x2
- add UserG2 for 3 methods - incremental accumulate, windowed, g2atend
- update documenation and default_params.py
- add support for %T and %C in h5output file, with unit test
- extend parCorAnaMaskColorTool to create testmask with 10 pixels on.
	
Tag: V00-00-05
- implement WorkerData for incrememtal calculation
- add some unit tests
- add psmon plotting
- before refactor to plug in WorkerData
	
Tag: V00-00-04
2015-4-10 David Schneider
- update sphinx documentation
- implement testing part of framework, and cmp script for h5 output